corrected alignement of map title

--- a/css/map_styles.css
+++ b/css/map_styles.css
@@ -64,6 +64,7 @@ body, html {
 	float: left;
 	display: block;
 	width: 100%;
+	text-align: center;
 }
 
 #map-holder  p {
